@@ -211,3 +211,4 @@
 
 [2022-04-30]
 - Added the script for world gameobjects to make the quest Oh Noes, the Tadpoles! trigger for every member of a group.
+- Added the script for Borean Tundra to make the quest Escape from the Winterfin Caverns trigger for every member of a group.
